dev-cluster-config/k8s/dice-magic-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dice-magic-app
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dice-magic-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dice-magic-app
    spec:
      containers:
      - name: dice-server
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
        image: gcr.io/k8s-dice-magic/dice-server:latest
        resources:
          limits:
            cpu: 400m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 100Mi
        imagePullPolicy: Always
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/google-default
          name: google-default
          readOnly: true
      - name: chat-clients
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
        image: gcr.io/k8s-dice-magic/chat-clients:latest
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        imagePullPolicy: Always
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/google-default
          name: google-default
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 10
      volumes:
      - name: google-default
        secret:
          defaultMode: 420
          secretName: google-default
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "dice-magic-app-service"
  namespace: "default"
  labels:
    app: "dice-magic-app"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 7070
  selector:
    app: "dice-magic-app"
  type: "NodePort"
---
apiVersion: v1
items:
- apiVersion: autoscaling/v1
  kind: HorizontalPodAutoscaler
  metadata:
    labels:
      app: dice-magic-app
    name: dice-magic-app-hpa
    namespace: default
  spec:
    maxReplicas: 10
    minReplicas: 2
    scaleTargetRef:
      apiVersion: apps/v1beta1
      kind: Deployment
      name: dice-magic-app
    targetCPUUtilizationPercentage: 80
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
