dev-cluster-config/k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - www.dicemagic.io
      - api.dicemagic.io
      secretName: letsencrypt-certs
  rules:
  - host: www.dicemagic.io
    http:
      paths:
      - path: /
        backend:
          serviceName: www-service
          servicePort: 80
  - host: api.dicemagic.io
    http:
      paths:
      - path: / 
        backend:
          serviceName: dice-magic-app-service
          servicePort: 80
